# gpupower0701

./: .gitignore  CMakeLists.txt  README.md  SKILL.md
archive/failed_preflight_20260713/: README.md
archive/legacy_20260707/: README.md
archive/pre_current_protocol_20260712/: README.md
archive/superseded_a100_l2_policy_20260713/: README.md
archive/superseded_v2_design_20260714/: README.md
docs/: README.md  a100_fp16_energy_experiment_design_v2.md  a100_node_experiment_guide_ko.md  component_energy_decomposition_experiment_design_ko.md  component_energy_final_experiment_plan_ko.md  component_energy_method_comparison_ko.md  component_energy_redo_experiment_design_ko.md  component_energy_self_critique_ko.md  component_energy_separation_execution_plan_ko.md  cross_platform_component_experiment_guide_ko.md  gpu_power_modeling_experiment_results_ko.md  gpu_power_modeling_whitepaper_synthesis_ko.md  h100_node_experiment_guide_ko.md  howitworks.md  literature_energy_values_audit_ko.md  multi_gpu_support_plan_ko.md  ncu_validation_energy_calculation_ko.md  v100_experiment_prompt_ko.md  v100_node_experiment_guide_ko.md
docs/a100_v2_design_assets/: a100_v2_feasibility_matrix.csv
docs/audits/: a100_l2_counter_scope_and_rtx_pair_remediation_ko.md  a100_strict_summary_failure_remediation_ko.md  a100_tensor_control_calibration_failure_20260715_ko.md  a100_v100_external_result_remediation_ko.md  a100_v100_schema_smoke_stop_20260716_ko.md  a100_v100_synthetic_selftest_false_failure_20260716_ko.md  component_energy_self_critique_ko.md  current_goal_alignment_audit_ko.md  literature_energy_values_audit_ko.md  memory_path_cross_architecture_sweep_audit_ko.md  multigpu_sweep_pairing_identity_fix_20260716_ko.md  (+4 more)
include/: config.hpp  kernels.cuh  nvml_compat.hpp  nvml_energy.hpp  result_writer.hpp
results/: README.md
scripts/: README.md  analyze_component_dynamic_attribution.py  analyze_component_pairs.py  analyze_matched_control_energy.py  analyze_ncu_path_acceptance.py  analyze_register_footprint.py  audit_a100_ncu_precheck.py  audit_a100_tensor_l2_remediation.py  audit_component_goal_readiness.py  audit_component_reliability.py  audit_documentation_consistency.py  audit_gpu_quiescence.py  audit_matched_control_instability.py  audit_platform_power_readiness.py  audit_platform_result_package.py  audit_power_api_measurements.py  audit_power_state_stability.py  audit_strict_component_summary.py  audit_tensor_mma_binary.py  build_component_evidence_matrix.py  build_gpu_component_energy_presentation.py  build_platform_intake_dashboard.py  build_strict_component_summary.py  fit_component_energy_model.py  inspect_register_footprint.py  join_ncu_summary.py  merge_ncu_validation_summaries.py  plan_platform_component_experiment.py  plan_tensor_fp16_cross_platform_experiment.py  plot_component_dynamic_attribution.py  plot_component_method_visuals.py  plot_current_rtx3090_results.py  plot_dram_reporting_policy.py  plot_external_memory_scope_review.py  plot_platform_sweep_design.py  plot_results.py  preflight_gpu_support.py  remediate_wsl_wallclock_intervals.py  run_component_dynamic_attribution.py  run_component_dynamic_attribution_ncu.sh  (+16 more)
src/: kernels.cu  main.cu  nvml_energy.cpp  result_writer.cpp
(+1441 files in other folders)
